2005-04-08 Vangelis Rokas <vrokas AT users.sourceforge.net>

	* src/pic16/pcode.c (pic16_get_op2): enlarged size of array b to 128
	bytes

2005-04-07 Raphael Neider <rneider AT web.de>

	* device/include/pic16/usart.h: added compatibility defines for
	  devices with more than one USART
	* device/include/pic16/pic18f[68][567]20.h: activated above defines

2005-04-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/Makefile.in: updated for port specific include

2005-04-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/ports/mcs51/spec.mk: added mcs51 include

2005-04-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/8051.h,
	* device/include/8052.h,
	* device/include/at89S8252.h,
	* device/include/at89c55.h,
	* device/include/at89x051.h,
	* device/include/at89x51.h,
	* device/include/at89x52.h,
	* device/include/mcs51reg.h,
	* device/include/reg51.h,
	* device/include/reg764.h,
	* device/include/regc515c.h,
	* device/include/sab80515.h: (re)moved these 12 files
	* device/include/mcs51/8051.h,
	* device/include/mcs51/8052.h,
	* device/include/mcs51/at89S8252.h,
	* device/include/mcs51/at89c55.h,
	* device/include/mcs51/at89x051.h,
	* device/include/mcs51/at89x51.h,
	* device/include/mcs51/at89x52.h,
	* device/include/mcs51/mcs51reg.h,
	* device/include/mcs51/reg51.h,
	* device/include/mcs51/reg764.h,
	* device/include/mcs51/regc515c.h,
	* device/include/mcs51/sab80515.h: and added them here

2005-04-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/stdarg.h: changed SDCC specific keywords to double
	  underlined form.
	* device/include/stdint.h: changed intptr_t and uintptr_t for others than
	  mcs51 and ds390.
	* device/include/hc08/mc68hc908gp32.h,
	* device/include/hc08/mc68hc908jb8.h,
	* device/include/hc08/mc68hc908jkjl.h,
	* device/include/hc08/mc68hc908qy.h: fixed comments
	* device/include/mcs51/README: updated
	* device/include/mcs51/c8051f120.h: added PINRSF